--- a/kubernetes/shopfront-service.yaml
+++ b/kubernetes/shopfront-service.yaml
@@ -6,7 +6,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: shopfront
+  name: shopfront-app-deployment
   namespace: ${namespace}
 spec:
   selector:
@@ -21,8 +21,9 @@ spec:
       containers:
       - name: shopfront
         image: iad.ocir.io/orasenatdpltintegration03/shopfront:${BUILDRUN_HASH}
+        imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+        - containerPort: 9080 
           protocol: TCP
         livenessProbe:
           exec:
@@ -45,6 +46,6 @@ spec:
   ports:
     - port: 80
       protocol: TCP
-      targetPort: 8080
+      targetPort: 9080
   selector:
     app: shopfront-app
